# trabalho-02-thallesjulia

./: .gitignore  README.md
relatorio/: relatorio.tex
workspace/: CHANGELOG.md  LICENSE  Makefile  test-all.sh  workspace.cabal
workspace/app/: Main.hs
workspace/examples/: example1_factorial.sl  example2_structs.sl  example3_arrays.sl  example4_math.sl  example5_identity.sl  example6_map.sl  example6_map_incr.sl  factorial.sl  generics.sl  struct.sl
workspace/src/SL/: AST.hs  Interpreter.hs  Lexer.hs  Parser.hs  Pretty.hs  Semantic.hs
workspace/test/: Spec.hs
